# durable-call

./: .gitignore  dev_requirements.txt  pyproject.toml
examples/: setup_logging.py  test_faulty.py  test_simple.py  test_subprocess.py
src/durable_call/: __init__.py  call_store.py  call_store.sql  durable.py  robust.py
tests/: test_call_store.py
